@@ -4,6 +4,9 @@ Changes in Version 0.15-2
     type = "parameter" (previously called type = "worth") and type = "rank".
     Thanks to Heather Turner for pointing out the problem.
 
+  o node_btplot() used to fail for worth=FALSE or ref=<character> but works
+    now correctly again. Thanks to Heather Turner for pointing out the problem.
+
   o node_regionplot() now also works correctly on devices with a default white
     (rather than transparent) background such as png or jpeg.
 
